[project]
name = "production-rag-using-langchain-and-vector-databases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.3.2",
    "langchain-anthropic>=1.4.4",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
]
